# whisper-x

./: .gitignore  README.md  install_whisperx.sh  pyproject.toml  requirements.txt  run_whisperx.sh
src/whisperx/: __init__.py  run_whisperx.py
